<resources>
    <string name="app_name">military_quest</string>

    <string name="common_private">비공개</string>
    <string name="common_public">공개</string>
    <string name="common_delete">삭제</string>
    <string name="common_cancel">취소</string>
    <string name="common_add">추가</string>
    <string name="common_add_mode">추가하기</string>

    <string name="common_start">시작하기</string>
    <string name="common_modify">수정</string>
    <string name="common_start_mode">시작하기</string>
    <string name="common_modify_mode">수정하기</string>

    <string name="common_my_info">내정보</string>
    <string name="common_other_info">동료정보</string>
    <string name="common_community">커뮤니티</string>

    <string name="message_delete">삭제하실 건가요?</string>

    <string name="all_photo">전체사진</string>
    <string name="select_folder">폴더선택</string>
    <string name="image_count">(%d)</string>

    <string name="enter_date_form">입대일 : %s</string>
    <string name="retire_date_form">전역일 : %s</string>

    <string name="sub_name_form">대한민국 %s %s</string>
    <string name="d_day_form">D%s%d</string>

    <string name="common_notice">공지사항</string>
    <string name="common_ask">문의하기 &amp; 건의사항</string>

    <string name="title_my_info_init">내정보 입력</string>
    <string name="title_my_info_edit">내정보 수정</string>

    <string name="ad_dialog_info_text">동영상을 시청해주시면 저희가 더 나은 버전을 만드는 데에 도움을 줄 수 있습니다. 지금 시청하시겠습니까?\n\n시청 후에는 12시간 동안 이 대화 상자가 표시되지 않습니다.</string>
    <string name="watch_video">동영상 시청</string>

</resources>