<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.tapark.military_quest.MainActivityViewModel" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="left">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/actionBarLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/app_background"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/menuImageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:padding="14dp"
                    android:src="@drawable/ic_round_menu_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_my_info"
                    android:textSize="18dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/actionBarSubButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:padding="14dp"
                    android:gravity="center"
                    android:text="@string/common_modify_mode"
                    android:textSize="14dp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/topGrayLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_5"
                app:layout_constraintTop_toBottomOf="@id/actionBarLayout"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragmentContainerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/topGrayLine"
                app:layout_constraintBottom_toTopOf="@id/bottomGrayLine"
                android:name="com.tapark.military_quest.home.HomeFragment"
                tools:layout="@layout/fragment_home" />

            <View
                android:id="@+id/bottomGrayLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white_5"
                app:layout_constraintBottom_toTopOf="@id/mainBottomNavigationView"/>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/mainBottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_background"
                app:menu="@menu/bottom_nav_menu"
                app:itemIconTint="@color/selector_color_main_white"
                app:itemTextColor="@color/selector_color_main_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/adViewContainer"/>

            <FrameLayout
                android:id="@+id/adViewContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_gravity="left"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="24dp"
                android:background="@color/app_background">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="밀리터리 퀘스트"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/app_main"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:text="@string/common_notice"
                    android:textSize="16dp"
                    android:textColor="@color/app_background"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="24dp"
                    android:text="@string/common_ask"
                    android:textSize="16dp"
                    android:textColor="@color/app_background"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>